fixed the <ol> overflow. added some dynamic sizes, when resizing the browser window

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@ body {
 .body {
     background-color: #000000AA;
     height: auto;
-    width: 800px;
+    max-width: 800px;
     padding: 20px;
     border-radius: 30px;
     margin: auto;
@@ -14,7 +14,7 @@ body {
 .content {
     color: #ffffff;
     height: auto;
-    width: 700px;
+    max-width: 700px;
     margin: auto;
     font-family:Arial, Helvetica, sans-serif;
 }
@@ -44,17 +44,23 @@ p {
     padding-top: 20px;
 }
 
-img {
-    height: 350px;
-    width: 700px;
-    object-fit: cover;
+.thumbnail {
+    max-width: 700px;
+    height: auto;
     border-radius: 30px;
+    margin: 0 auto;
+    overflow: hidden;
 }
 
-.thumbnail {
+.thumbnail img {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    object-fit: cover;
+    border-radius: 30px;
+    margin: 0 auto;
+    max-width: 100%;
+    max-height: 100%;
+    height: 380px;
+    width: 700px;
 }
 
 .ingredient {
@@ -62,7 +68,7 @@ img {
 }
 
 .steps {
-    width: 600px;
+    max-width: 600px;
 }
 
 ul.nav {
@@ -104,4 +110,5 @@ li {
 
 ol {
     padding-left: 2.5em;
+    overflow: auto;
 }
